--- a/package.json
+++ b/package.json
@@ -1,7 +1,16 @@
 {
-  "name" : "jQuery CODA plugin",
+  "name" : "jquery-coda",
   "version" : "0.2.0",
-  "devDependencies" : {
-    "grunt" : "latest"
+  "devDependencies": {
+    "grunt": "~0.4.1",
+    "grunt-contrib-jshint": "~0.1.1",
+    "grunt-contrib-concat": "~0.1.2",
+    "grunt-contrib-watch": "~0.2.0",
+    "grunt-contrib-uglify": "~0.1.1",
+    "grunt-contrib-qunit": "~0.2.1",
+    "grunt-contrib-clean": "~0.4.0",
+    "grunt-contrib-copy": "~0.4.0",
+    "grunt-cli": "~0.1.6",
+    "markdown": "~0.4.0"
   }
 }
